--- a/accountsettings.html
+++ b/accountsettings.html
@@ -48,34 +48,35 @@
             <legend class="fieldsetname">Your Account</legend>
           </div>
           <div class="control-group">
-                  <img src="john.jpg" alt="john" style="display: block ;margin-left: auto; margin-right: auto; width: 25%;">              
+                  <img src="john.jpg" alt="john" style="display: block ;margin-left: auto; margin-right: auto; width: 25%;">             
           </div>
 
           <div class="control-group">
             <label class="control-label"  for="firstname">First Name</label>
             <div class="controls">
-              <p>John</p>              
+              <p>John<img src="edit.png" alt="edit" height="20" width="20"></p> 
+                          
             </div>
           </div>
 
           <div class="control-group">
             <label class="control-label" for="lastname">Last Name</label>
             <div class="controls">
-              <p>Smith</p>             
+              <p>Smith<img src="edit.png" alt="edit" height="20" width="20"></p>             
             </div>
           </div>
 
           <div class="control-group">
             <label class="control-label" for="email">Email Address</label>
             <div class="controls">
-              <p>example@email.com</p>
+              <p>example@email.com<img src="edit.png" alt="edit" height="20" width="20"></p>
             </div>
           </div>
 
           <div class="control-group">
             <label class="control-label"  for="username">Username</label>
             <div class="controls">
-              <p>JohnSmith21</p>
+              <p>JohnSmith21<img src="edit.png" alt="edit" height="20" width="20"></p>
             </div>
           </div>
 
@@ -85,8 +86,8 @@
               <button class="btn btn-warning">Previous orders</button>
             </div>
 
-          <div class="ACh2">
-              <h2>Your previous test results:</h2>            
+          <div class="AS">
+              <h2><strong>Your previous test results:</strong></h2>        
           </div>
 
           <div class="control-group">
